@@ -2,6 +2,11 @@ Revision history for Dist-Zilla-Plugin-OSPrereqs
 
 {{$NEXT}}
 
+  [NEW FEATURES]
+
+  - The dynamic_config key in the generated META.* files will be true (Dave
+    Rolsky)
+
 0.001     2011-01-27 23:18:42 EST5EDT
 
   [NEW FEATURES]
